--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -24,7 +24,7 @@
     "clsx": "^2.1.1",
     "lightweight-charts": "^5.0.3",
     "lucide-react": "^0.554.0",
-    "next": "16.0.3",
+    "next": "^15.0.0",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "sonner": "^2.0.7",
@@ -39,7 +39,7 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
-    "eslint-config-next": "16.0.3",
+    "eslint-config-next": "^15.0.0",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
